<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="winner">Winner</string>
    <string name="resign">Resign</string>
    <string name="resign_message">Are you sure you want to resign the current game?</string>
    <string name="time_left">Time Left:</string>
    <string name="you">You</string>
    <string name="computer">Computer</string>
    <string name="seconds">seconds</string>
    <string name="about">About</string>
    <string name="statistics">Statistics</string>
    <string name="play_multi">Play VS Another Player</string>
    <string name="play_local">Play On This Device</string>
    <string name="local_o_wins">Your wins with O:</string>
    <string name="global_o_wins">Total wins with O:</string>
    <string name="local_x_wins">Your wins with X:</string>
    <string name="global_x_wins">Total wins with X:</string>
    <string name="local_time">Your time on this app:</string>
    <string name="global_time">Total time on this app:</string>
    <string name="settings">Settings</string>
    <string name="player">Player</string>
    <string name="won_the_game">Won The Game</string>
    <string name="continue_dialog">Continue</string>
    <string name="won">Won</string>
    <string name="its_a_tie">"It\'s a tie!"</string>
    <string name="congratulations">Congratulations!</string>
    <string name="tie">Tie</string>
    <string name="choose_player">"Choose player"</string>
    <string name="player_chooser">"Which player you wish to be?"</string>
    <string name="not_available_offline">"Not available while offline…"</string>
    <string name="restart">Restart</string>
    <string name="restart_question">"Are you sure you want to restart the current game?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="first_to">First to</string>
    <string name="wins_wins">wins, wins!</string>
    <string name="play_local_message">VS Computer / 2 Players</string>
    <string name="two_players">2 Players</string>
    <string name="number_wins">Number of wins, to win:</string>
    <string name="start_player">Choose starting player:</string>
    <string name="toggle_time">Toggle time</string>
    <string name="max_time">Choose max time per turn:</string>
    <string name="enter_name">Enter your name:</string>
    <string name="play">Play</string>
    <string name="loading">Loading</string>
    <string name="waiting">Waiting…</string>
    <string name="lobby_length">Lobby number should be exactly 4 number</string>
    <string name="lobby_not_found">No lobby with this number was found</string>
    <string name="lobby_left_message">The other player has left the lobby</string>
    <string name="back_main_menu">Back to main menu</string>
    <string name="host_game">Host a game</string>
    <string name="join_game">Join a lobby</string>
    <string name="multiplayer_settings">Multiplayer Settings</string>
    <string name="multiplayer_dialog">Choose if you\'d like to join a game / host a game / matchmaking (require taking a photo)</string>
    <string name="lobby">Multiplayer Lobby</string>
    <string name="lobby_number">Lobby number:</string>
    <string name="ready">Ready</string>
    <string name="return_settings">Return to settings</string>
    <string name="join_lobby">Join Lobby</string>
    <string name="join">Join</string>
    <string name="enter_room_number">Enter the room number (ask your friend):</string>
    <string name="its">It\'s</string>
    <string name="turn">\'s turn</string>
    <string name="lobby_full">Lobby is already full</string>
    <string name="dev_first">You are</string>
    <string name="dev_second">steps away from entering developer mode</string>
    <string name="easy">Easy</string>
    <string name="computer_difficulty">Choose the computer difficulty:</string>
    <string name="hard">Hard</string>
    <string name="camera">Take Photo</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_activated">You won\'t be able to see other player\'s photos (won\'t affect matchmaking)</string>
    <string name="privacy_deactivated">You will see other player\'s photos (won\'t affect matchmaking)</string>
    <string name="developer">Developer</string>
    <string name="app_version">Version:</string>
    <string name="developed_by">Developed by Liad Paz</string>
    <string name="about_app">I made this app as a school project in app development in Android. I made this in about two months, if you find any bugs or glitches please send me an email. Thanks for playing!</string>
    <string name="o" translatable="false">O</string>
    <string name="x" translatable="false">X</string>
    <string name="game">Game</string>
    <string name="not_authorized">You are not authorized…</string>
    <string name="whats_new">What\'s New:</string>
    <string name="new_things">-Added Smart AI, so now there are two AI difficulties
-Added broadcast receiver to check internet connectivity
-Added background music while in-game option (Porter Robinson &amp; Madeon - Shelter)
-Added player left lobby failsafe
-Changed the create lobby to a safer method
-Added uploading photo progress bar to multiplayer lobby
-Added matchmaking
-Optimizations and bug fixes</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="unauthed_user" tools:ignore="Typos">You need to be signed in in order to play online</string>
    <string name="logout_message">You have successfully logged out</string>
    <string name="delete_user">Delete User</string>
    <string name="hello_button">Hello!</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_night">Good Night</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="authenticated_users">Only authenticated users can see global stats</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not Connected</string>
    <string name="use_google_name">Use Google name</string>
    <string name="connecting">Connecting…</string>
    <string name="options">Options</string>
    <string name="title_activity_options">Settings</string>
    <string name="general">General</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="delete_user_warning">You may be required to reauthenticate</string>
    <string name="delete_user_fail">Something went wrong while trying to delete your user</string>
    <string name="delete_user_success">Successfully deleted your user</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_all_message">Are you sure you want to delete all lobbies?</string>
    <string name="display">Display</string>
    <string name="delete_user_message">Are you sure you want to delete your user?</string>
    <string name="use_google_photo">Use Google photo</string>
    <string name="photo_not_found">Your Google photo was not found, using a placeholder instead…</string>
    <string name="hear_music">Hear music while in game</string>
    <string name="lobby_couldnt_make">Couldn\'t make new lobby</string>
    <string name="uploading_photo">Uploading photo in progress</string>
    <string name="matchmaking">Matchmaking</string>
    <string name="waiting_matchmaking">Looking for a match…</string>
    <string name="matchmaking_unavailable">Couldn\'t find a match for you</string>
    <string name="matchmaking_uploading_photo">A match was found. Uploading photo…</string>
    <string name="matchmaking_waiting_other_player">Waiting to the other player…</string>
    <string name="delete_lobby">Delete Lobby</string>
    <string name="delete_lobby_message">Are you sure you want to delete</string>
</resources>
