<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/multiplayer_settings">
        <CheckBoxPreference
            android:disableDependentsState="true"
            app:defaultValue="true"
            app:icon="@android:drawable/ic_lock_lock"
            app:key="privacy"
            app:summaryOff="@string/privacy_deactivated"
            app:summaryOn="@string/privacy_activated"
            app:title="@string/privacy" />

        <CheckBoxPreference
            app:defaultValue="true"
            app:icon="@drawable/googleg_standard_color_18"
            app:key="google_name"
            app:title="@string/use_google_name" />

        <CheckBoxPreference
            android:dependency="privacy"
            app:defaultValue="true"
            app:icon="@drawable/googleg_standard_color_18"
            app:key="google_photo"
            app:title="@string/use_google_photo" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/display">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/daynight"
            app:key="dark_mode"
            app:title="@string/dark_mode" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/general">
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/musical_note"
            android:key="music"
            android:title="@string/hear_music" />

        <Preference
            app:icon="@android:drawable/ic_menu_delete"
            app:key="delete"
            app:summary="@string/delete_user_warning"
            app:title="@string/delete_user" />

        <Preference
            app:icon="@android:drawable/ic_menu_info_details"
            app:key="about"
            app:title="@string/about" />
    </PreferenceCategory>
</PreferenceScreen>
